ensure page header background color is visible

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,11 @@
   width: 100%;
   background-color: var(--bodyBackground);
   overflow: scroll;
+  scrollbar-width: none;
+}
+
+.app::-webkit-scrollbar {
+  display: none;
 }
 
 .likes__popout__container {
